--- a/style_sheets/Introduction.tex
+++ b/style_sheets/Introduction.tex
@@ -15,3 +15,10 @@ We have used CPFA to simulate the field experiments. The environment of CPFA has
 We observe ants use pheromone more when the food sources are clumped. And they discover the pile more frequently if the food source is large. They don't use the pheromone to recruit from the food source that is scattered in the environment. 
 
 As we mentioned Foraging of ants depends on many factors including temperature, availability of food, distance from food to the nest and so many\cite{whitford1975factors,gordon1996founding}. So in some of the field experiments, ants did not collect enough seeds. Which is why we were unable to detect any change points in some of the experiments for each of the species. Since the CPFA does not depend on these conditions, we have detected change points in each of the simulations.
+\clearpage
+\section{\label{section:Contribution and Organization}Contribution and Organization}
+Chapter 2 includes background study for solving this problem. It describes the ants that we have used in our experiments, the ant inspired model CPFA and the Genetic Algorithm for tuning the parameters.\par
+Chapter 3 describes the procedure that we have followed to investigate the problem statement. It includes the simulation environment, parameter settings for genetic algorithm, methods and efficiencies of different approaches of change point algorithms. \par
+Chapter 4 includes the results of different change point detection methods. And the result of best change point detection algorithm on the field data. \par
+Chapter 5 includes conclusion and future works. 
+
