--- a/style_sheets/template.tex
+++ b/style_sheets/template.tex
@@ -81,12 +81,17 @@
  sources by using memory (site fidelity) or communicating it through pheromones. Previous field experiments showed that the rate of seed collection depends on the distribution of food in the environment. If food is spatially clustered, then ants recruit nest mates to collect from large clusters. However, we don't know when the recruitment occur. To explore this question, we analyzed foraging rates on different sizes of piles in the simulation.  Using a power law distribution to arrange seeds in piles of different sizes, we observed that for significantly large piles of seeds, the ants take more time to discover a pile, but once discovered, seeds are collected at an increased rate from that pile. We also observed that ants may repeatedly lose track of found piles and then re-find them. Using change point analysis on seed intake time series, we were able to trace the discovery of piles by detecting changes in the foraging rate.  We use simulations to determine how to correlate change points with recruitment events, and then use that relationship to infer when recruitment occurs in field data.
 \clearpage %(required for 1-page abstract)
 \end{abstract}
-
 \tableofcontents
 \listoffigures
 \listoftables
 \listofalgorithms
 \addtocontents{loa}{\def\string\figurename{Algorithm}}
+\begin{glossary}{Longest  string}
+	\item[GA]
+	Genetic Algorithm
+	\item[CPFA]
+	Central Place Foraging Algorithm
+\end{glossary}
 \mainmatter
 \include{Introduction}
 \include{Background}
