Data Added before first correction of Melanie

--- a/style_sheets/Appendicies.tex
+++ b/style_sheets/Appendicies.tex
@@ -1,8 +1,167 @@
 \chapter{Appendicies}
-\section{\label{section:overview}Overview}
-   The classic approach to proving a theorem is some really difficult 
-   mathematics.  For the theory of relativity, I asked grandpa Al exactly 
-   how he proved it.  He gave me a few hints, including some stuff about
-   rest mass and big electro-motive force.  I think he is really smart.
-\section{Conclusions}
-   I conclude that this is a really short thesis.
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{DonutCharts/Slide2.JPG}
+	\caption{Efficiency chart for \textit{P. Rugosus}, one pile,  communication only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{DonutCharts/Slide3.JPG}
+\caption{Efficiency chart for \textit{P. Rugosus}, four pile,  communication only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{DonutCharts/Slide4.JPG}
+	\caption{Efficiency chart for \textit{P. Rugosus}, sixteen pile,  communication only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{DonutCharts/Slide5.JPG}
+	\caption{Efficiency chart for \textit{P. Rugosus}, one pile,  memory and communication combined setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{DonutCharts/Slide6.JPG}
+	\caption{Efficiency chart for \textit{P. Rugosus}, four pile, memory and communication combined setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{DonutCharts/Slide7.JPG}
+	\caption{Efficiency chart for \textit{P. Rugosus}, sixteen pile,  memory and communication combined setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[width=\textwidth]{DonutCharts/Slide8.JPG}
+	\caption{Efficiency chart for \textit{P. Rugosus}, one pile,  memory only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[width=\textwidth]{DonutCharts/Slide9.JPG}
+	\caption{Efficiency chart for \textit{P. Rugosus}, four pile,  memory only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[width=\textwidth]{DonutCharts/Slide10.JPG}
+	\caption{Efficiency chart for \textit{P. Rugosus}, sixteen pile,  memory only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{DesertorumDonutCharts/Slide12.JPG}
+	\caption{Efficiency chart for \textit{P. Desertorum}, one pile,  communication only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{DesertorumDonutCharts/Slide13.JPG}
+	\caption{Efficiency chart for \textit{P. Desertorum}, four pile,  communication only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{DesertorumDonutCharts/Slide14.JPG}
+	\caption{Efficiency chart for \textit{P. Desertorum}, sixteen pile,  communication only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{DesertorumDonutCharts/Slide15.JPG}
+	\caption{Efficiency chart for \textit{P. Desertorum}, one pile,  memory and communication combined setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{DesertorumDonutCharts/Slide16.JPG}
+	\caption{Efficiency chart for \textit{P. Desertorum}, four pile, memory and communication combined setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{DesertorumDonutCharts/Slide17.JPG}
+	\caption{Efficiency chart for \textit{P. Desertorum}, sixteen pile,  memory and communication combined setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[width=\textwidth]{DesertorumDonutCharts/Slide18.JPG}
+	\caption{Efficiency chart for \textit{P. Desertorum}, one pile,  memory only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[width=\textwidth]{DesertorumDonutCharts/Slide19.JPG}
+	\caption{Efficiency chart for \textit{P. Desertorum}, four pile,  memory only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[width=\textwidth]{DesertorumDonutCharts/Slide20.JPG}
+	\caption{Efficiency chart for \textit{P. Desertorum}, sixteen pile,  memory only setting.}
+\end{figure}
+\clearpage
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{MaricopaDonutCharts/Slide22.JPG}
+	\caption{Efficiency chart for \textit{P. Maricopa}, one pile,  communication only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{MaricopaDonutCharts/Slide23.JPG}
+	\caption{Efficiency chart for \textit{P. Maricopa}, four pile,  communication only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{MaricopaDonutCharts/Slide24.JPG}
+	\caption{Efficiency chart for \textit{P. Maricopa}, sixteen pile,  communication only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{MaricopaDonutCharts/Slide25.JPG}
+	\caption{Efficiency chart for \textit{P. Maricopa}, one pile,  memory and communication combined setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{MaricopaDonutCharts/Slide26.JPG}
+	\caption{Efficiency chart for \textit{P. Maricopa}, four pile, memory and communication combined setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[height=0.35\textheight]{MaricopaDonutCharts/Slide27.JPG}
+	\caption{Efficiency chart for \textit{P. Maricopa}, sixteen pile,  memory and communication combined setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[width=\textwidth]{MaricopaDonutCharts/Slide28.JPG}
+	\caption{Efficiency chart for \textit{P. Maricopa}, one pile,  memory only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[width=\textwidth]{MaricopaDonutCharts/Slide29.JPG}
+	\caption{Efficiency chart for \textit{P. Maricopa}, four pile,  memory only setting.}
+\end{figure}
+\begin{figure}[h]
+	\includegraphics[width=\textwidth]{MaricopaDonutCharts/Slide30.JPG}
+	\caption{Efficiency chart for \textit{P. Maricopa}, sixteen pile,  memory only setting.}
+\end{figure}
+\clearpage
+\begin{figure}
+	\includegraphics[width=\textwidth,height=0.35\textheight]{PheromoneOnly/PheromoneOnly.jpg}
+	\caption{Comparison of change point detection methods for pheromone only parameters for \textit{P. Rugosus}. The time in seconds represents the difference between a pheromone laying event followed by a detection of change point in the foraging rate.}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=\textwidth,height=0.35\textheight]{PheromoneOnly/AllPlot.png}
+	\caption{Comparison of change point detection method without outliers for pheromone only parameters \textit{P. Rugosus}.The time in seconds represents the difference between a pheromone laying event followed by a detection of change point in the foraging rate.}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=\textwidth,height=0.35\textheight]{PheromoneOnly/Linear.png}
+	\caption{Efficiency of Linear Detrending method on data of \textit{P. Rugosus} for pheromone only settings}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=\textwidth,height=0.35\textheight]{PheromoneOnly/ConstantWithNoOutlier.png}
+	\caption{Efficiency of Constant Detrending method on data of \textit{P. Rugosus} for pheromone only Settings.}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=\textwidth,height=0.35\textheight]{PheromoneOnly/LinearWithNoOutlierRateOfChange.png}
+	\caption{Efficiency of Linear Detrending with rate of change method on data of \textit{P. Rugosus} for pheromone only settings.}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=\textwidth,height=0.35\textheight]{PheromoneOnly/ConsantWithNoOutlierRateOfChange.png}
+	\caption{Efficiency of Linear Detrending with rate of change method on data of \textit{P. Rugosus} for pheromone only settings}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=\textwidth,height=0.35\textheight]{AllParameters/AllPlotComparison.png}
+	\caption{Comparison of all methods on data of \textit{P. Rugosus} for both combination of communication and memory}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=\textwidth,height=0.35\textheight]{AllParameters/AllPlot.png}
+	\caption{Comparison of all methods without outliers on data of \textit{P. Rugosus} for both combination of communication and memory}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=\textwidth,height=0.35\textheight]{AllParameters/LinearDetrendingNoOutlier.png}
+	\caption{Efficiency of linear detrending on data of \textit{P. Rugosus} for combination of communication and sitefidelity }
+\end{figure}
+\begin{figure}
+	\includegraphics[width=\textwidth,height=0.35\textheight]{AllParameters/ConstantDetrendingNoOutlier.png}
+	\caption{Efficiency of constant detrending methods on data of \textit{P. Rugosus} for both combination of communication and memory}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=\textwidth,height=0.35\textheight]{AllParameters/LinearDetrendingNoOutlierRateOfChange.png}
+	\caption{Efficiency of linear detrending method with rate of change in foraging rate on data of \textit{P. Rugosus} for both combination of communication and memory}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=\textwidth,height=0.35\textheight]{AllParameters/ConstantDetrendingNoOutlierRateOfChange.png}
+	\caption{Efficiency of constant detrending method with rate of change in foraging rate on data of \textit{P. Rugosus} for both combination of communication and memory}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=\textwidth,height=0.35\textheight]{SiteFidelityOnly/SiteFidelity_2.png}
+	\caption{Comparison of all methods on data of \textit{P. Rugosus} for memory only parameters}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=\textwidth,height=0.35\textheight]{SiteFidelityOnly/SiteFidelity_WithoutOutlier_2.png}
+	\caption{Comparison of all methods without outliers on data of \textit{P. Rugosus} for memory only parameters}
+\end{figure}
